--- a/Lizard-Tail/Lizard-Tail/MainWindow.xaml
+++ b/Lizard-Tail/Lizard-Tail/MainWindow.xaml
@@ -4,9 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lizard_Tail"
+        xmlns:local_controls="clr-namespace:Lizard_Tail.View"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <local_controls:HomePage x:Name="HomePage"/>
         
+
     </Grid>
 </Window>
